# oshi-api

./: Cargo.toml  Dockerfile  README.md  compose.yml  justfile
.github/workflows/: publish.yml
src/: colors.rs  config.rs  main.rs  scheduler.rs  sqlite.rs  time.rs  utils.rs
src/api/: mod.rs
src/pages/: index.rs  list.rs  mod.rs
src/youtube/: channels.rs  mod.rs  utils.rs  videos.rs
