[package]
authors    = ["killbasa <git@killbasa.com>"]
edition    = "2024"
license    = "MIT"
name       = "oshi-api"
publish    = false
repository = "https://github.com/killbasa/oshi-api"
version    = "0.1.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[dependencies]
anyhow               = "1.0.98"
axum                 = "0.8.4"
chrono               = "0.4.41"
dotenv               = "0.15.0"
once_cell            = "1.21.3"
reqwest              = { version = "0.13.1", features = ["json"] }
roxmltree            = "0.20.0"
rusqlite             = { version = "0.35.0", features = ["bundled"] }
serde                = { version = "1.0.219", features = ["derive"] }
tokio                = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-cron-scheduler = "0.14.0"
tower-http           = { version = "0.6.6", features = ["cors"] }
tracing              = "0.1.41"
tracing-subscriber   = "0.3.19"
