[package]
authors    = ["killbasa <git@killbasa.com>"]
edition    = "2024"
license    = "MIT"
name       = "oshi-api"
publish    = false
repository = "https://github.com/killbasa/oshi-api"
version    = "0.1.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[dependencies]
anyhow               = "1.0.102"
axum                 = "0.8.8"
chrono               = "0.4.44"
dotenvy              = "0.15.7"
reqwest              = { version = "0.13.2", features = ["json"] }
roxmltree            = "0.21.1"
rusqlite             = { version = "0.39.0", features = ["bundled"] }
serde                = { version = "1.0.228", features = ["derive"] }
serde_json           = "1.0.149"
tokio                = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-cron-scheduler = "0.15.1"
tower-http           = { version = "0.6.8", features = ["cors"] }
tracing              = "0.1.44"
tracing-subscriber   = "0.3.23"
